...
    <string name="cd_top_curve">screen top curve view</string>
    <string name="cd_bottom_curve">screen bottom curve view</string>
    <string name="cd_app_logo">App logo</string>
    <string name="cd_open_github_repo">Open github repo of this app</string>
    <string name="cd_background_image">background image</string>
    <string name="cd_save_button">Press to save data</string>
    <string name="cd_action_delete">Delete record</string>
    <string name="cd_action_edit">Edit record</string>
    <string name="cd_action_share">Share record</string>
    <string name="cd_toggle_sensitive_data_visibility">Toggle sensitive data visibility</string>
    <string name="cd_add_new_record_button">Add new record button</string>
    <string name="cd_search_bar">Search records by title</string>
    <string name="cd_clear_search_bar">Clear search bar</string>"
    <string name="cd_back_button">Back button</string>
...
    <string name="common_error_mandatory_field">Mandatory Field</string>
    <string name="common_no_result">No Result!</string>
    <string name="common_click_on_plus_to_add_data">Click on <b>+</b> button to add new data</string>
    <string name="common_app_playstore_download">Data stored securely by Safe Box.\nDownload it from playstore : %1$s</string>
    <string name="common_data">Data</string>
    <string name="common_delete">Delete</string>
    <string name="common_cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="common_ok">OK</string>
    <string name="close">Close</string>
    <string name="error">Error!</string>
    <string name="github">Github</string>
    <string name="biometric_title_text">Login to SafeBox</string>
    <string name="biometric_sub_title_text">Verify your identity</string>
...
    <string name="name">Name</string>
    <string name="pin">PIN</string>
    <string name="cvv">CVV</string>
    <string name="linkedAccount">Linked Account</string>

    <!--    delete record dialog-->
    <string name="delete_this_record">Delete this record?</string>
    <string name="delete_record_dialog_body">I understand that this record will be permanently removed.</string>


    <!--     backup-->
    <string name="backup">Backup</string>
    <string name="backup_path_not_set_message">"Your backup location isn't set!! Use the button below to choose one.\nTip: It's a good idea to create a new folder for your backups (e.g., 'Safe Box Backup')."</string>
...
    <string name="notification_permission_rationale_dialog_body">To ensure you\'re always aware of your automatic backups, please allow notifications.\nYou will be alerted when a backup is complete or if an issue occurs.</string>
    <string name="notification_permission_rationale_dialog_heading">Need Notification permission</string>

    <!--    Record screen-->
    <string name="loading_data">Loading your data …</string>
    <string name="no_record">Start fresh by adding a record or bring back your data from a backup.</string>
    <string name="new_record_button">Add a new record</string>
    <string name="restore_records_button">Restore data</string>
    <string name="no_filtered_record_title">Oops! No results here.</string>
    <string name="no_filtered_record_body">We couldn\'t find anything matching your search. Try adjusting your filters or checking for typos.</string>


    <!--    Other-->
...
    <string name="enter_password">Enter password </string>
    <string name="blank_validation_text">Enter something !</string>
    <string name="length_validation_text">Too short !</string>
    <string name="special_char_validation_text">Enter a special character (e.g. @, *, $)</string>
    <string name="case_validation_text">Must include at least one uppercase(A) and one lowercase letter(a).</string>
    <string name="numeric_validation_text">Enter at least two numbers (e.g. 1, 2, 3)</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="unlock">unlock</string>
    <string name="collapse">Collapse</string>
    <string name="login_data">Login Data</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_card">Bank Card</string>
...
    <string name="show_hint">Show Hint</string>
    <string name="hide_hint">Hide Hint</string>
    <string name="hint">Hint</string>
    <string name="title">Title </string>
    <string name="url">URL</string>
    <string name="user_id">User Id </string>
    <string name="notes">Notes</string>
    <string name="bank_account_data">Bank Account Data</string>
    <string name="account_number">Account Number </string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_id">Customer Id</string>
    <string name="branch_code">Branch Code</string>
    <string name="branch_name">Branch Name</string>
...
